# files_pipe_cli

./: .gitignore  Cargo.toml  README.md
docs/: 0.2.0重构计划.md  ToDo.md
src/: main.rs
src/cmd/: cmd_exit.rs  cmd_server.rs  cmd_task.rs  mod.rs  rootcmd.rs
src/commons/: fileutiles.rs  json_utile.rs  mod.rs  processbar.rs  yamlutile.rs
src/configure/: current_settings.rs  mod.rs
src/logger/: logger.rs
src/request/: global_http_client.rs  mod.rs  req.rs  req_task.rs  req_template.rs
src/request/modules/: mod.rs  moduile_task.rs  module_filter.rs  module_respose.rs  module_storage.rs  module_task.rs  module_task_compare.rs  module_task_status.rs  modules.rs
src/resources/: init_resources.rs  rocksdb.rs
src/tui/: app.rs  app.rs.bak  colors.rs  destroy.rs  errors.rs  mod.rs  pops.rs  tables.rs  tabs.rs  term.rs  tui_main.rs  tui_main.rs.bak
src/tui/pops/: pop_alert.rs  pop_help.rs  pop_new_server.rs  pop_select_template.rs  pop_task_editor.rs
src/tui/tables/: table_server.rs
src/tui/tabs/: about.rs  email.rs  newtab.rs  recipe.rs  server_tab.rs  task_tab.rs  traceroute.rs  weather.rs
