[package]
name = "files_pipe_cli"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
tokio = { version = "^1", features = ["full", "tracing"] }
clap = "^4"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
shellwords = "1.1.0"
lazy_static = "1.4.0"
sysinfo = "0.30.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "^1"
serde_yaml = "0.9.27"
log = "0.4.20"
log4rs = "1.2.0"
rs-snowflake = "0.6.0"
async-trait = "0.1.66"
walkdir = "2.3.2"
bytes = "1.4.0"
infer = "0.16.0"
rayon = "1.10.0"
time = "0.3.20"
rand = "0.8.5"
rust-crypto = "0.2.36"
num_cpus = "1.15.0"
dashmap = "^6"
regex = "1.8.1"
termtree = "0.5.0"
indicatif = "0.17.6"
notify = "6.1.1"
tabled = "0.15.0"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
inotify = "0.10.2"
once_cell = "1.19.0"
console-subscriber = "0.3.0"
thiserror = "1.0.61"
bincode = "1.3.3"
url = "2.5.2"
reqwest = { version = "0.12.5", features = ["json"] }
tracing = { version = "0.1.40", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
rocksdb = { version = "0.22.0", feature = "multi-threaded-cf" }

ratatui = { version = "0.27.0", features = ["all-widgets"] }
strum = "0.26.3"
rand_chacha = "0.3.1"
palette = "0.7.6"
derive_builder = "0.20.0"
font8x8 = "0.3.1"
color-eyre = "0.6.3"
itertools = "0.13.0"
unicode-width = "0.1.13"
fakeit = "1.2.0"


[[example]]
name = "rocksdb"
path = "examples/rocksdb_sample.rs"

[[example]]
name = "tui"
path = "examples/tui.rs"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
